ATO-251: Remove unused code and tag where required but deprecated
- Remove instances of effectiveVectorOfTrust
- Ensure that `effectiveVectorOfTrust` is set (as auth depend on it)
- Add deprecated tag to `effectiveVectorOfTrust` field
- Adjust `AuthenticationCallbackHandlerIntegrationTest` to test for multiple vectors, now that there are more supported `LevelOfConfidence`s
- Remove unused `generateClientRegistry`